--- a/assets/views/movies/edit.html
+++ b/assets/views/movies/edit.html
@@ -28,7 +28,11 @@ Edit movies: {{ item.id }}
             <div class="mt-5">
                 <button class=" text-xs py-3 px-6 rounded-lg bg-gray-900 text-white" type="submit">Submit</button>
                 <button class="text-xs py-3 px-6 rounded-lg bg-red-600 text-white"
-                            onclick="confirmDelete(event, '/movies/{{ item.id }}', '/movies' )">Delete</button>
+                    hx-delete="/movies/{{ item.id }}"
+                    hx-confirm="Are you sure you want to delete this item?"
+                    hx-target="body"
+                    hx-redirect="/movies"
+                >Delete</button>
             </div>
         </div>
     </form>
